Made things more colorful, fixed gap problem on People

--- a/mysite/static/css/list_of_people.css
+++ b/mysite/static/css/list_of_people.css
@@ -8,8 +8,9 @@
     padding: 0;
 }
 
-#big-people-list img {
-    margin: 0 0 -5px 0;
+#main img {
+    position: relative;
+    top: 3px;
     padding: 0;
 }
 #big-people-list ul {
